modify a little bit

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
              th:onclick="showMemberInfo([[${user.user_name}]], [[${user.user_phone}]])">
             
             <i class="fab fa-python"></i> 
-            <span class="file-name" th:text="${user.user_name}">사용자명</span>
+            <span class="file-name" th:text="file">사용자명</span>
         </div>
     </main>
 </div>
